2006-04-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (ReadArgsFile): When outputting a warning about a
	property, use a single colon ':', since that is what is used to
	document properties in the source code. (2 colons are used for signals)

	* gtk-doc.make (sgml-build.stamp): added $(HFILE_GLOB) here, to
	catch any new documentation in the headers.

2006-04-12  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (tagify2): strip special "-struct" suffix from
	text of links to widget structs.

2006-04-09  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	fix link after live.gnome.org wiki changes

2006-04-09  Damon Chaplin  <damon@gnome.org>

	* Released 1.6.

2006-03-29  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scangobj.in:
	missing '*' for arg in signal prototype in docs (#335486)

2006-03-26  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (MergeSourceDocumentation): don't output warnings
	for overridden titles, since that happens a lot. (#320010)

	* configure.in: check for pkg-config >= 0.19.

	* Makefile.am (pkgconfigdir): put the .pc file in $(datadir) rather
	than $(libdir), since gtk-doc is architecture-independant. (#120950)

	* configure.in: removed the hard dependancy on openjade or jade, since
	XML is used mostly now rather than SGML. We just output a warning
	rather than an error if neither openjade or jade are found.

2006-03-21  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	add sect1 to pages with top-page offset adjustment (#166363)

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in (ScanHeader): try to handle the start of function
	declarations spread over 3 lines. (#321708, Jorn Baayen)

2006-03-19  Damon Chaplin  <damon@gnome.org>

	(OutputOldParams): don't bother outputting unused parameters if they
	don't have any documentation as that is pointless.

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mktmpl.in (ReadTemplateFile): Add a workaround for an old