@@ -2709,7 +2709,9 @@ EOF
 
 	# If we haven't found the symbol name yet, look for it.
 	if (!$symbol) {
-	    if (m%^\s*([\w:-]*\w)\s*:?%) {
+	    if (m%^\s*(SECTION:\s*\w+)%) {
+		$symbol = $1;
+	    } elsif (m%^\s*([\w:-]*\w)\s*:?%) {
 		$symbol = $1;
 	    }
 	    next;
